Disable fact gathering and fix watch dirs

--- a/qbtfarm/templates/qbittorrent.conf.j2
+++ b/qbtfarm/templates/qbittorrent.conf.j2
@@ -21,7 +21,9 @@ Connection\GlobalDLLimitAlt=10
 Connection\GlobalUPLimitAlt=10
 Downloads\PreAllocation=false
 Downloads\SavePath=/home/qbittorrent/rcc-uploads/
-Downloads\ScanDirsV2=@Variant(\0\0\0\x1c\0\0\0\x1\0\0\0\x30\0/\0h\0o\0m\0\x65\0/\0q\0\x62\0i\0t\0t\0o\0r\0r\0\x65\0n\0t\0/\0w\0\x61\0t\0\x63\0h\0\x32\0\0\0\x2\0\0\0\x1)
+Downloads\ScanDirs=/home/qbittorrent/watch{{item}}/
+Downloads\ScanDirsV2=@Variant(\0\0\0\x1c\0\0\0\x1\0\0\0\x32\0/\0h\0o\0m\0\x65\0/\0q\0\x62\0i\0t\0t\0o\0r\0r\0\x65\0n\0t\0/\0w\0\x61\0t\0\x63\0h\0\{{ vars['qbt_watch1_' + (item | string) ] }}\0\{{ vars['qbt_watch2_' + (item | string) ] }}\0\0\0\x2\0\0\0\0)
+Downloads\DownloadInScanDirs=0
 Downloads\StartInPause=false
 Downloads\TempPath=/home/qbittorrent/data{{ item }}/
 Downloads\TempPathEnabled=false
