Handle temp download dirs

--- a/qbtfarm/templates/qbittorrent.conf.j2
+++ b/qbtfarm/templates/qbittorrent.conf.j2
@@ -26,7 +26,7 @@ Downloads\ScanDirsV2=@Variant(\0\0\0\x1c\0\0\0\x1\0\0\0\x32\0/\0h\0o\0m\0\x65\0/
 Downloads\DownloadInScanDirs=0
 Downloads\StartInPause=false
 Downloads\TempPath=/home/qbittorrent/data{{ item }}/
-Downloads\TempPathEnabled=false
+Downloads\TempPathEnabled=true
 Downloads\TorrentExportDir=/home/qbittorrent/torrents{{ item }}/
 DynDNS\DomainName=changeme.dyndns.org
 DynDNS\Enabled=false
